--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\MainMenu\MainMenu_UIManager.cs" />
      <Compile Include="Assets\Scripts\Player_Movement.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>D:/Software/Unity/Projects/Indy500/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
