--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\MainMenu_UIManager.cs" />
      <Compile Include="Assets\Scripts\Manager.cs" />
+     <Compile Include="Assets\Scripts\MovingWall.cs" />
      <Compile Include="Assets\Scripts\Player_Movement.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>D:/Software/Unity/Projects/Indy500/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
